--- a/repositories/templates/base.html
+++ b/repositories/templates/base.html
@@ -1,23 +1,27 @@
-{% load staticfiles %}
 <!DOCTYPE html>
+{% load staticfiles %}
+{% load notifications_tags %}
+
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'base.css' %}?_=2020032901">
-    <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}">
-    <script type="text/javascript" src="{% static 'jquery-1.12.4.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'notifications/notify.js' %}"></script>
+    <title>
+        {% block title %}{% endblock %}
+    </title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+
     {% block header_extends %}{% endblock %}
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'home' %}">个人博客网站</a>
+                <a class="navbar-brand" href="{% url 'index' %}">个人博客网站</a>
                 <button class="navbar-toggle collapsed"  data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -27,27 +31,28 @@
             <div id="navbar-collapse" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="{% block nav_home_active %}{% endblock %}">
-                        <a href="{% url 'home' %}">首页</a>
+                        <a href="">首页</a>
                     </li>
                     <li class="{% block nav_blog_active %}{% endblock %}">
-                        <a href="{% url 'blog_list' %}">博客</a>
+                        <a href="{% url 'blog:post_list' %}">博客</a>
                     </li>
+
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
                     {% if not user.is_authenticated %}
                         <li>
                             {% if request.GET.from %}
-                                <a href="{% url 'login' %}?from={{ request.GET.from }}">登录</a>
+                                <a href="?from={{ request.GET.from }}">登录</a>
                             {% else %}
-                                <a href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a>
+                                <a href="?from={{ request.get_full_path }}">登录</a>
                             {% endif %}
                         </li>
                         <li>
                             {% if request.GET.from %}
-                                <a href="{% url 'register' %}?from={{ request.GET.from }}">注册</a>
+                                <a href="?from={{ request.GET.from }}">注册</a>
                             {% else %}
-                                <a href="{% url 'register' %}?from={{ request.get_full_path }}">注册</a>
+                                <a href="?from={{ request.get_full_path }}">注册</a>
                             {% endif %}
                         </li>
                     {% else %}
@@ -69,7 +74,7 @@
                         </li>
                     {% endif %}
                     <li>
-                        <form class="navbar-form search-form" action="{% url 'search' %}">
+                        <form class="navbar-form search-form" action="">
                             <div class="form-group">
                                 <input type="text" name="wd" class="form-control" placeholder="Search">
                             </div>
@@ -83,13 +88,16 @@
         </div>
     </div>
 
-    {% block content %}{% endblock %}
+    <div class="container">
+        {% block content %}
+
+        {% endblock %}
+    </div>
 
     <!-- footer -->
     <div class="footer">
         <div class="website-info">
-            <p>粤ICP备18135148号-1 Copyright©2018 zqyhdm.com 版权所有</p>
-            <p>意见反馈或联系我（2872402050@qq.com）</p>
+            <p>备案号 Copyright©2018 zqyhdm.com 版权所有</p>
         </div>
     </div>
 
@@ -136,7 +144,9 @@
             $('.live_notify_badge').text(unread_count);
         }
     </script>
-    {% register_notify_callbacks callbacks='my_special_notification_callback' %}
-    {% block script_extends %}{% endblock %}
+
+    {% block script_extends %}
+
+    {% endblock %}
 </body>
 </html>
